--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "e2e-playwright-tests",
+  "name": "e2e-playwrite-tests",
+  "version": "1.0.0",
+  "description": "Playwright E2E tests for DevOps portfolio",
+  "main": "index.js",
   "scripts": {
-    "test": "npx playwright test"
+    "test": "npx playwright test",
+    "test:ui": "npx playwright test --ui"
   },
+  "keywords": ["playwright", "e2e", "testing"],
+  "author": "Arkadiy Voronov",
+  "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.48.0"
   }
